--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^8.17.5",
     "gltfjsx": "^6.5.0",
     "gsap": "^3.12.5",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.438.0",
     "next": "14.2.5",
     "react": "^18",
